--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
     justify-content: space-around;
   }
   
-  .forecast-day {
+  .forecast-slot {
     background-color: #f9f9f9;
     padding: 10px;
     margin: 10px;
