--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
     box-sizing: border-box;
   }
   
-  .dark-theme .forecast-day {
+  .dark-theme .forecast-slot {
     background-color: #555;
   }
   
